<resources>
    <string name="app_name">Store Management</string>
    <string name="store_navigation">Store</string>
    <string name="products_navigation">Products</string>
    <string name="orders_navigation">Orders</string>
    <string name="all_products">All</string>
    <string name="in_stock_products">In stock</string>
    <string name="low_stock_products">Low stock</string>
    <string name="product_name">Name</string>
    <string name="name">Name</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="overcharge">Overcharge, lv</string>
    <string name="barcode">Barcode</string>
    <string name="percentage">% of price</string>
    <string name="price">Price, lv</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="empty_not_saved">Not saved</string>
    <string name="leva">lv</string>
    <string name="ordered">Ordered</string>
    <string name="status_pending">Pending</string>
    <string name="quantity">Quantity</string>
    <string name="add_order_button">Add Order</string>
    <string name="final_price">Final Price:</string>
    <string name="_0">0</string>
    <string name="save_button">Save</string>
    <string name="store_management">Store Management</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="order">Order</string>
    <string name="delivered">Delivered</string>
    <string name="deleted">Deleted</string>
    <string name="status_ordered">Ordered</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_cancelled">Cancelled</string>

    <string name="register_text">Continue without login:</string>
    <string name="google_email_text">Google email</string>
    <string name="password_text">Password</string>
    <string name="login_button_forgotPass"><u>Forgot your password?</u></string>
    <string name="login_button_continue">Continue</string>
    <string name="registration_text">Registration</string>
    <string name="login_progress_loading">Logging in…</string>
    <string name="login_buttons_separator_or">- or -</string>
    <string name="login_button_login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="create_account_button">Create account</string>
    <string name="store_management_about">Store Management has been developed to help store owners with managing and ordering their stock.</string>
    <string name="store_management_creator">Created by Konstantina Rovelova</string>


    <string name="action_about">About Store Management</string>
    <string name="action_export">Export to CSV file</string>
    <string name="action_log_out">Log out</string>
    <string name="action_log_in">Log in</string>
    <string name="csv_file_generated_text">The CSV file is generated.</string>
    <string name="csv_file_not_generated_text">The CSV file cannot be generated.</string>

    <string name="barcode_duplicate_error_message">A product with the same barcode already exists.</string>
    <string name="barcode_empty_error_message">The barcode cannot be empty.</string>
    <string name="price_max_value_error_message">Тhe maximum allowed price is 100lv.</string>
    <string name="price_invalid_error_message">Invalid price.</string>
    <string name="overcharge_max_value_error_message">Тhe maximum allowed overcharge is 100lv.</string>
    <string name="overcharge_invalid_error_message">Invalid overcharge.</string>
    <string name="price_empty_error_message">Тhe price cannot be empty.</string>
    <string name="overcharge_empty_error_message">Тhe overcharge cannot be empty.</string>
    <string name="name_empty_error_message">Product name cannot be empty.</string>
    <string name="drawer">drawer</string>
    <string name="pending_products">Pending</string>
    <string name="ok">OK</string>
    <string name="yay_text">Yaay!</string>
    <string name="user">User</string>
    <string name="all_products_info">All available products.</string>
    <string name="in_stock_products_info">Products with a quantity over 5.</string>
    <string name="low_stock_products_info">Products with a quantity below 5.</string>
    <string name="pending_products_info">Products that haven\'t been delivered yet.</string>
    <string name="store_info">Edit the products\' quantities from here by entering the currently available values.\nThe products\' quantities will be calculated after that.</string>
    <string name="create_order_info">Create an order by entering quantities and press \n \"Add Order\".</string>
    <string name="edit_order_info">Edit the order by changing quantities and press \"Save\". \n The order can be edited because it is in Pending state.</string>
    <string name="view_order_info">The order content for this order. \n It cannot be edited because the order is not in Pending state.</string>
    <string name="date_new_old">Date /New - Old/</string>
    <string name="date_old_new">Date /Old - New/</string>
    <string name="pending_status">Pending status</string>
    <string name="ordered_status">Ordered status</string>
    <string name="confirmed_status">Confirmed status</string>
    <string name="delivered_status">Delivered status</string>
    <string name="cancelled_status">Cancelled status</string>
    <string name="final_price_ascending">Final price /Ascending/</string>
    <string name="final_price_descending">Final price /Descending/</string>
    <string name="user_ascending">User /Ascending/</string>
    <string name="user_descending">User /Descending/</string>
    <string name="email_ascending">Email /Ascending/</string>
    <string name="email_descending">Email /Descending/</string>
    <string name="order_by">ORDER BY:</string>
    <string name="quantity_ascending">Quantity /Ascending/</string>
    <string name="quantity_descending">Quantity /Descending/</string>
    <string name="name_descending">Name /Descending/</string>
    <string name="name_ascending">Name /Ascending/</string>
    <string name="retrieving_orders">Retrieving orders</string>
    <string name="retrieving_products">Retrieving products</string>
    <string name="retrieving_pending_products">Retrieving pending products</string>
    <string name="info">Information</string>
    <string name="no_user_info_orders">Log in to your account to be able to create an order.</string>
    <string name="no_user_info_notifications">Log in to your account to be able to see and create notifications.</string>
    <string name="select_an_user_to_proceed_with_creating_an_order">Select an user to proceed with creating an order.</string>
    <string name="in_stock_quantity">In stock quantity:</string>
    <string name="user_products_info">\'s products</string>
    <string name="choose_an_account_type">Choose an account type:</string>
    <string name="vendor">Vendor</string>
    <string name="retailer">Retailer</string>
    <string name="customer">Customer</string>
    <string name="vendors">Vendors</string>
    <string name="retailers">Retailers</string>
    <string name="type">Type</string>
    <string name="notifications">Notifications</string>
    <string name="orders_notifications">Here are all orders\' notifications received from other users.</string>
    <string name="new_order">New order</string>
    <string name="confirm">Confirm</string>

    <string name="facebook_app_id">462200458523315</string>
    <string name="fb_login_protocol_scheme">fb462200458523315</string>
    <string name="or">or</string>
    <string name="email_text">Email</string>
    <string name="my_order">My order</string>
    <string name="my_orders">My orders</string>
    <string name="external_order">External order</string>
    <string name="external_orders">External orders</string>
</resources>
