<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/user"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/user" />
        <item
            android:id="@+id/account_type_text"
            android:icon="@drawable/ic_baseline_local_florist"
            android:title="@string/type" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_outline_info"
            android:title="@string/action_about" />
        <item
            android:id="@+id/action_export"
            android:icon="@drawable/ic_baseline_import_export"
            android:title="@string/action_export" />
        <item
            android:id="@+id/action_log_in"
            android:icon="@drawable/ic_baseline_login"
            android:title="@string/action_log_in" />
    </group>
</menu>
