<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/lightBarColor"
    android:fillViewport="true">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:minWidth="@dimen/login_app_name_width"
        android:padding="10dp"
        android:text="@string/store_management"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewO"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <ImageView
        android:id="@+id/imageViewW"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pineapple"
        app:layout_constraintEnd_toStartOf="@+id/imageViewL"
        app:layout_constraintStart_toEndOf="@+id/imageViewO"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <ImageView
        android:id="@+id/imageViewL"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/cherry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />


    <TextView
        android:id="@+id/account_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:minWidth="@dimen/login_app_name_width"
        android:text="@string/choose_an_account_type"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewW" />

    <RadioButton
        android:id="@+id/vendorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/vendor"
        android:textColor="@color/darkBarColor_a"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/account_type_text"
        app:layout_constraintTop_toBottomOf="@+id/account_type_text" />

    <RadioButton
        android:id="@+id/retailerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retailer"
        android:textColor="@color/darkBarColor_a"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/account_type_text"
        app:layout_constraintTop_toBottomOf="@+id/vendorButton" />

    <RadioButton
        android:id="@+id/customerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/customer"
        android:textColor="@color/darkBarColor_a"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/account_type_text"
        app:layout_constraintTop_toBottomOf="@+id/retailerButton" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginBottom="@dimen/login_button_margin"
        android:background="@drawable/button_shape"
        android:text="@string/save_button"
        android:enabled="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewOrange"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/orange"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewWatermelon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/watermelon"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLemon"
        app:layout_constraintStart_toEndOf="@+id/imageViewOrange" />

    <ImageView
        android:id="@+id/imageViewLemon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/lemon"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



