<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:id="@+id/scrollView2">


    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".StoreFragment">

        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/appBarLayout"
                app:layout_constraintBottom_toTopOf="@+id/button_scan_barcode">

            <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/toolbarTop"
                    app:title="Create Product"
                    android:background="@color/barColor"
                    app:titleTextColor="@color/titleColor"
                    app:titleTextAppearance="@style/Toolbar.TitleText"/>

        </android.support.design.widget.AppBarLayout>


        <Button
                android:id="@+id/button_scan_barcode"
                android:text="@string/scan_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/name_text" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toTopOf="@+id/price_text"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" android:layout_marginTop="60dp">

            <EditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorAccent"
                    android:visibility="visible"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/price_text"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toTopOf="@+id/overcharge_text"
                app:layout_constraintTop_toBottomOf="@+id/name_text" android:layout_marginBottom="8dp">

            <EditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:inputType="number"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/price"
                    android:visibility="visible" android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/overcharge_text"
                android:layout_width="414dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="64dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toTopOf="@+id/barcode_text">

            <EditText
                    android:id="@+id/product_overcharge"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:inputType="textPersonName|number"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/overcharge"
                    android:visibility="visible"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/barcode_text"
                android:layout_width="422dp"
                android:layout_height="59dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="436dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/overcharge_text" >

            <EditText
                    android:id="@+id/product_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:inputType="textPersonName|number"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:hint="@string/barcode"
                    android:visibility="visible"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/button_add_product"
                android:text="@string/add_product"
                android:layout_width="338dp"
                android:layout_height="50dp"
                android:textColor="@color/colorAccent"
                android:gravity="center" android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.701"
                android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/barcode_text"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
