<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/products_coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/products_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarTop"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/barColor"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Products"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/titleColor" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/products_app_bar"
        android:background="@color/lightBarColor"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/all_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_products" />

        <android.support.design.widget.TabItem
            android:id="@+id/in_stock_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_stock_products" />

        <android.support.design.widget.TabItem
            android:id="@+id/low_stock_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_stock_products" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/products_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout_products" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/products_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/colorPrimary"
        app:rippleColor="@color/colorPrimary" />

</android.support.constraint.ConstraintLayout>
